# orbit

./: Cargo.toml  DESIGN.md  LICENSE.txt  README.md  renderdoc.cap
assets/: input.ron  input_gamepad.ron  scene.ron  ui.ron
assets/mesh/: atmosphere.gltf
assets/shader/: atmosphere.frag  atmosphere.frag.spv  atmosphere.vert  atmosphere.vert.spv  compile.sh  fsquad.vert  fsquad.vert.spv  fxaa.frag  fxaa.frag.spv  sun.frag  sun.frag.spv  tonemap.frag  tonemap.frag.spv
assets/shader/header/: fxaa.frag
assetsrc/: planet.blend  planet.blend1
config/: display.ron
src/: controls.rs  debug.rs  main.rs  planet.rs
src/debug/: mod.rs
src/render/: atmosphere.rs  fxaa.rs  graph.rs  mod.rs  sun.rs  tonemap.rs
