[package]
name = "orbit"
version = "0.1.0"
authors = ["Thomas Colliers <mail@thomascolliers.com>"]
edition = "2018"

[dependencies]
amethyst = "0.15.0"
log = { version = "0.4.8", features = ["serde"] }
serde = { version = "1.0.104", features = ["derive"] }

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]