[package]
name = "orbit"
version = "0.1.0"
authors = ["Thomas Colliers <mail@thomascolliers.com>"]
edition = "2018"

[dependencies]
amethyst = { path = "/home/ego/projects/amethyst" }
log = { version = "0.4.8", features = ["serde"] }
serde = { version = "1.0.104", features = ["derive"] }
derivative = "1.0.3"
rendy = { version = "0.4.1", default-features = false, features = ["base", "mesh-obj", "texture-image", "texture-palette", "serde-1"] }
failure = "0.1"
lazy_static = "1.4.0"
glsl-layout = "0.3.2"

[features]
default = ["vulkan", "amethyst/gltf"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
